--- a/package.json
+++ b/package.json
@@ -19,17 +19,19 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "seed": "ts-node ./node_modules/typeorm/cli.js migration:run"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^1.0.0",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/swagger": "4.8.0",
+    "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^8.0.1",
     "@types/bcrypt": "^5.0.0",
+    "add": "^2.0.6",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -42,6 +44,7 @@
     "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nestjs-typeorm-paginate": "^2.5.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
@@ -50,7 +53,8 @@
     "rxjs": "^7",
     "set-tz": "^0.2.0",
     "swagger-ui-express": "^4.1.6",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
@@ -58,7 +62,7 @@
     "@nestjs/testing": "^7.0.0",
     "@types/express": "^4.17.3",
     "@types/jest": "26.0.10",
-    "@types/node": "^13.9.1",
+    "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
