--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "cross-env APP_ENV=local nest start --watch",
-    "dev": "cross-env APP_ENV=local nest start --watch",
+    "dev": "cross-env TZ=utc APP_ENV=local nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,6 +27,7 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/jwt": "^8.0.0",
+    "@nestjs/microservices": "^8.0.4",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^8.0.1",
